refactor: MissingRepositoryTest의 regionCode를 별도의 변수로 선언